--- a/css/home/tablet.css
+++ b/css/home/tablet.css
@@ -1,12 +1,11 @@
 @media (max-width: 900px) and (min-width: 600px) {
   .container {
-    grid-template-columns: 1fr;
-    grid-template-rows: auto;
-    grid-template-areas:
-      "hd"
-      "intro"
-      "bp"
-      "ft";
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    padding: 10px;
+    box-sizing: border-box;
   }
 
   .header {
