--- a/css/home/tablet_and_mobile.css
+++ b/css/home/tablet_and_mobile.css
@@ -1,4 +1,4 @@
-@media (max-width: 600px) {
+@media (max-width: 750px) {
   .container {
     display: flex;
     flex-direction: column;
@@ -88,16 +88,16 @@
   }
 
   .postbox {
-    display: grid;
-    grid-template-areas:
-      "img"
-      "text";
-    height: 500px;
-    width: 80%; /* Full width for smaller screens */
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: auto;
+    width: 80%;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     border-radius: 8px;
     overflow: hidden;
-    grid-area: img;
+    margin-bottom: 10px;
+    margin-top: 10px;
   }
 
   .postbox-image,
@@ -105,16 +105,15 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-items: center;
-    width: 250px;
-    height: 250px;
-    grid-area: img;
+    justify-content: center;
+    width: 180px;
+    height: 180px;
+    border-radius: 8px;
   }
 
   .postbox-image-caption {
-    margin-top: 20px;
     text-align: center;
-    grid-area: img;
+    margin-top: 20px;
   }
 
   .postbox-content {
@@ -123,18 +122,22 @@
     align-items: center;
     text-align: center;
     color: beige;
-    grid-area: text;
+    padding: 20px;
   }
 
   .postbox-content h3 {
     margin: 10px 0;
-    grid-area: text;
   }
 
   .postbox-content p {
     margin: 5px 0;
     color: beige;
-    grid-area: text;
+  }
+
+  .read-more-btn-wrapper {
+    display: flex;
+    justify-content: center;
+    width: 100%;
   }
 
   .read-more-btn {
@@ -144,13 +147,11 @@
     color: white;
     border-radius: 5px;
     cursor: pointer;
-    grid-area: text;
     border: 2px solid #007bff;
   }
 
   .read-more-btn:hover {
     background-color: #0056b3;
-    grid-area: text;
   }
 
   .footer {
